SF-2395 Fix Viewport Bugs on Mobile (#2238)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
@@ -1,7 +1,9 @@
 @import '../checking-global-vars';
 
 :host {
+  position: absolute;
   height: 100%;
+  width: 100%;
   display: flex;
   overflow-y: auto;
 }
