--- a/src/SIL.XForge.Scripture/ClientApp/src/app/settings/settings.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/settings/settings.component.scss
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   max-width: 800px;
+  padding-block-end: 10px;
 }
 
 .mat-card {
