--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-generation.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-generation.component.scss
@@ -8,6 +8,8 @@
       font-weight: 500;
     }
   }
+
+  padding-block-end: 10px;
 }
 
 // Manually center over cancel button
