--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
@@ -1,15 +1,11 @@
+@use 'src/xforge-common/media-breakpoints/breakpoints' as *;
 @import 'src/variables';
 @import 'bootstrap/scss/mixins/breakpoints';
 
 :host {
   display: flex;
   flex-direction: column;
-}
-
-.content {
-  @include media-breakpoint-only(xs) {
-    margin: -10px;
-  }
+  height: 100%;
 }
 
 .avatar-padding {
@@ -112,12 +108,17 @@ app-text {
 }
 
 .content {
-  height: calc(100vh - 84px);
+  height: 100%;
   display: grid;
   column-gap: 10px;
 
   grid-template-rows: 72px minmax(0, 1fr);
   grid-template-columns: 1fr 1fr;
+
+  @include media-breakpoint-only(xs) {
+    margin: -10px;
+    height: calc(100% + 20px);
+  }
 }
 
 .toolbar {
